--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 * {
+  max-width: 1200px;
   font-family: "IBM Plex Sans", sans-serif;
   margin: 0;
   padding: 0;
@@ -238,4 +239,9 @@
 
 .container .card-container .back .box .cvv-box {
   font-weight: 600;
+}
+
+/* Modo responsivo */
+
+@media (min-width: 480px) {
 }
