feat: atualizacao do fundo do container

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 
 .container {
   min-height: 100vh;
-  background-color: #2b2b2b;
+  background-color: #ebebeb;
   display: flex;
   align-items: center;
   justify-content: center;
